examples-generated/nat/gateway.yaml
apiVersion: nat.azure.jet.crossplane.io/v1alpha1
kind: Gateway
metadata:
  name: example
spec:
  forProvider:
    idleTimeoutInMinutes: 10
    location: West Europe
    name: nat-Gateway
    publicIpAddressIds:
    - ${azurerm_public_ip.example.id}
    publicIpPrefixIds:
    - ${azurerm_public_ip_prefix.example.id}
    resourceGroupName: ${azurerm_resource_group.example.name}
    skuName: Standard
    zones:
    - "1"
  providerConfigRef:
    name: example
